[package]
name = "twisted_music"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
eframe = { version = "0.33.2", default-features = false, features = [
    "accesskit",
    "glow",
] }
egui_extras = "0.33.2"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

rfd = { version = "0.15.4", default-features = false, features = ["async-std"] }
windows = { version = "*", features = ["Win32_System_Threading"] }
kira = "0.11.0"
